[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/Assets/NokiaCellphone.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Assets/NokiaCellphone.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/PauseMenu/CustomButton.gd" type="Script" id=3]
[ext_resource path="res://UI/GameOver/GameOver.gd" type="Script" id=4]
[ext_resource path="res://UI/Assets/ui.png" type="Texture" id=6]
[ext_resource path="res://RadialGradient.png" type="Texture" id=7]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform float lod : hint_range(0., 5.) = 5.0;

void fragment()
{
	vec4 color = vec4(1., 1., 1., textureLod(TEXTURE, UV, lod).r);
	color.a *= clamp(abs(sin(TIME)) - SCREEN_UV.x, 1.-color.a, 10000.);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 9 )
shader_param/lod = 5.0

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.925333, 0.919318 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=13]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 75.29
flag_disable_z = true
direction = Vector3( 1, 0.5, 0 )
spread = 12.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 12.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_curve = SubResource( 10 )

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 7
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 184, 0, 11, 11 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 170, 0, 13, 13 )

[node name="GameOver" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -45, -39 )
custom_constants/separation = 8
alignment = 1
script = ExtResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 0.101961, 0.0980392, 0.117647, 1 )
material = SubResource( 11 )
position = Vector2( -12, 1 )
amount = 600
lifetime = 86.0
preprocess = 86.0
visibility_rect = Rect2( -100, -100, 360, 200 )
process_material = SubResource( 13 )
texture = ExtResource( 7 )

[node name="GameOverLabel" type="RichTextLabel" parent="."]
margin_left = 105.0
margin_top = 45.0
margin_right = 255.0
margin_bottom = 93.0
rect_min_size = Vector2( 150, 48 )
rect_clip_content = false
size_flags_horizontal = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][shake rate=45 level=8]Game Over[/shake]"
text = "Game Over"
scroll_active = false

[node name="Tip" type="RichTextLabel" parent="."]
margin_left = 105.0
margin_top = 101.0
margin_right = 255.0
margin_bottom = 117.0
rect_min_size = Vector2( 150, 16 )
rect_clip_content = false
size_flags_horizontal = 4
custom_constants/shadow_offset_y = 4
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "TIP_GO"
text = "TIP_GO"
scroll_active = false

[node name="Stats" type="HBoxContainer" parent="."]
margin_left = 106.0
margin_top = 125.0
margin_right = 254.0
margin_bottom = 151.0
size_flags_horizontal = 4

[node name="KillLogo" type="TextureRect" parent="Stats"]
margin_right = 11.0
margin_bottom = 26.0
texture = SubResource( 3 )
stretch_mode = 6

[node name="Kills" type="RichTextLabel" parent="Stats"]
margin_left = 15.0
margin_right = 63.0
margin_bottom = 26.0
rect_min_size = Vector2( 48, 16 )
rect_clip_content = false
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_constants/line_separation = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Kills
[color=yellow]%s"
text = "Kills
%s"
scroll_active = false

[node name="Score" type="RichTextLabel" parent="Stats"]
visible = false
margin_left = 67.0
margin_right = 115.0
margin_bottom = 26.0
rect_min_size = Vector2( 48, 16 )
rect_clip_content = false
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_constants/line_separation = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Score
[color=yellow]%s"
text = "Score
%s"
scroll_active = false

[node name="TimeLogo" type="TextureRect" parent="Stats"]
margin_left = 67.0
margin_right = 80.0
margin_bottom = 26.0
texture = SubResource( 4 )
stretch_mode = 6

[node name="Time" type="RichTextLabel" parent="Stats"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 26.0
rect_min_size = Vector2( 64, 16 )
rect_clip_content = false
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_constants/line_separation = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Time
[color=yellow]%s:%s:%s"
text = "Time
%s:%s:%s"
fit_content_height = true
scroll_active = false

[node name="HighScore" type="RichTextLabel" parent="."]
visible = false
margin_top = 138.0
margin_right = 360.0
margin_bottom = 172.0
rect_min_size = Vector2( 48, 34 )
rect_clip_content = false
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_constants/line_separation = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]High Score
[color=purple]%s"
text = "High Score
%s"
scroll_active = false

[node name="ContinueOptions" type="HBoxContainer" parent="."]
margin_left = 132.0
margin_top = 159.0
margin_right = 228.0
margin_bottom = 175.0
size_flags_horizontal = 4

[node name="NewRun" type="Button" parent="ContinueOptions"]
margin_right = 60.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Try Again"
script = ExtResource( 3 )

[node name="LeaderBoards" type="Button" parent="ContinueOptions"]
visible = false
margin_left = 64.0
margin_right = 144.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Leaderboards"
script = ExtResource( 3 )

[node name="Quit" type="Button" parent="ContinueOptions"]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
script = ExtResource( 3 )
isNegative = true

[connection signal="pressed" from="ContinueOptions/NewRun" to="." method="_on_continue_button_up"]
[connection signal="pressed" from="ContinueOptions/LeaderBoards" to="." method="_on_leaderboards_pressed"]
[connection signal="pressed" from="ContinueOptions/Quit" to="." method="_on_quit_pressed"]
